<resources>
    <string name="app_name">Detector de queda</string>

    <!-- MainActivity -->
    <string name="main_btn_iniciardeteccao">Iniciar Detecção de Queda!</string>

    <!-- DetectorActivity -->
    <string name="detector_txt_informativo">Algoritmo de detecção de quedas em andamento...</string>

    <!-- AlertaQuedaActivity -->
    <string name="alertaqueda_txt_informativo">Foi detectada uma queda durante o processo!</string>
    <string name="alertaqueda_txt_pergunta">Está tudo bem?</string>
    <string name="alertaqueda_btn_resposta_s">Estou bem</string>
    <string name="alertaqueda_btn_resposta_n">Não estou bem</string>
    <string name="alertaqueda_descriptionImage_icons">Icone de resposta</string>
    <string name="alertaqueda_descriptionImage_background">Background do botão</string>
    <string name="alertaqueda_descriptionBtns">(Mantenha pressionado)</string>

    <!-- FichaMedicaActivity -->
    <string name="fichamedica_descriptionImage_icon">Icone de alerta</string>
    <string name="fichamedica_txt_titulo">Preciso de Ajuda</string>
    <string name="fichamedica_txt_sangue">Grupo sanguíneo:</string>
    <string name="fichamedica_txt_alergias">Alergías e Reações</string>
    <string name="fichamedica_txt_medicamentos">Medicamentos</string>
    <string name="fichamedica_txt_contatos">Contatos de emergência</string>
</resources>
